--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ authors = ["Yuekai Jia <equation618@gmail.com>"]
 [dependencies]
 log = "0.4"
 bitflags = "1.3"
+memory_addr = { path = "../memory_addr" }
