--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ documentation = "https://rcore-os.github.io/arceos/page_table/index.html"
 
 [dependencies]
 log = "0.4"
-memory_addr = { path = "../memory_addr" }
-page_table_entry = { path = "../page_table_entry" }
+memory_addr = { git = "https://github.com/Starry-OS/memory_addr.git" }
+page_table_entry = { git = "https://github.com/Starry-OS/page_table_entry.git" }
